--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,7 +33,9 @@
     "@typescript-eslint/indent": 0,
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
-    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx", ".ts", ".tsx"] }]
+    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx", ".ts", ".tsx"] }],
+    "import/extensions" : ["warn", "never"],
+    "semi" : ["error", "never"],
   },
   "env": {
     "es6": true,
@@ -42,6 +44,7 @@
   },
   "settings": {
     "import/extensions": [".js",".jsx",".ts",".tsx"],
+
     "import/parsers": {
       "@typescript-eslint/parser": [".ts",".tsx"]
     },
