--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,15 +27,38 @@
     "prettier/react"
   ],
   "rules": {
-    "react/prop-types": 0,
-    "no-console": 1,
-    "@typescript-eslint/explicit-function-return-type": 0,
-    "@typescript-eslint/indent": 0,
+    "@typescript-eslint/camelcase": "warn",
+    "@typescript-eslint/no-use-before-define": "off",
+    "@typescript-eslint/space-before-function-paren": "off",
+    "prefer-destructuring": "off",
+    "no-shadow": "off",
+    "consistent-return": "off",
+    "no-plusplus": "off",
+    "import/extensions" : ["warn", "never"],
+    "no-nested-ternary": "off",
+    "jsx-a11y/media-has-caption": "off",
+    "jsx-a11y/label-has-associated-control": "off",
+    "jsx-a11y/anchor-is-valid": "off",
+    "jsx-a11y/no-static-element-interactions": "off",
+    "jsx-a11y/click-events-have-key-events": "off",
+    "react/jsx-curly-brace-presence": "off",
+    "react/jsx-wrap-multilines": "off",
+    "react/jsx-props-no-spreading": "off",
+    "react/state-in-constructor": ["error", "never"],
+    "react/require-default-props": "off",
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
-    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx", ".ts", ".tsx"] }],
-    "import/extensions" : ["warn", "never"],
-    "semi" : ["error", "never"],
+    "react/forbid-prop-types": "off",
+    "react/prop-types": "off",
+    "react/no-array-index-key": "off",
+    "react/destructuring-assignment": "off",
+    "react/jsx-one-expression-per-line": "off",
+    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx", ".tsx"] }],
+    "react/no-unused-state": "warn",
+    "import/prefer-default-export": "off",
+    "import/no-named-as-default": "off",
+    "semi" : ["error", "never"], 
+    "@typescript-eslint/explicit-function-return-type": "off"
   },
   "env": {
     "es6": true,
