--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,6 @@
 {
+  "singleQuote": true,
+  "printWidth": 100,
   "trailingComma": "all",
-  "singleQuote": false,
-  "noSemi": true
+  "semi": false
 }
