--- a/package.json
+++ b/package.json
@@ -35,12 +35,14 @@
     "@types/react-router": "^5.1.4",
     "@types/styled-components": "^5.0.1",
     "@types/styled-system": "^5.1.9",
+    "csstype": "^2.6.9",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "styled-components": "^5.0.1",
+    "styled-media-query": "^2.1.2",
     "styled-system": "^5.1.5",
     "typescript": "~3.7.2"
   },
