--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,6 +29,7 @@
   "rules": {
     "@typescript-eslint/camelcase": "warn",
     "@typescript-eslint/no-use-before-define": "off",
+    "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/space-before-function-paren": "off",
     "prefer-destructuring": "off",
     "no-shadow": "off",
